# qgroundcontrol

./: qgroundcontrol.pro
VideoReceiverApp/: CMakeLists.txt  main.cpp
src/: QGCApplication.cc
src/FlightDisplay/: FlightDisplayViewVideo.qml  VideoManager.cc
src/FlightMap/: QGCVideoBackground.qml
src/FlightMap/Widgets/: VideoPageWidget.qml
src/VideoManager/: CMakeLists.txt  VideoManager.cc  VideoManager.h
src/VideoReceiver/: CMakeLists.txt  GStreamer.cc  VideoReceiver.cc  VideoReceiver.h  VideoReceiver.pri
src/VideoStreaming/: VideoManager.cc  VideoManager.h  VideoReceiver.cc  VideoReceiver.h  VideoStreaming.cc  VideoStreaming.pri  gstmetamagic.c
src/VideoStreaming/gstqtvideosink/: gstqtquick2videosink.cpp
src/VideoStreaming/gstqtvideosink/painters/: videomaterial.cpp  videomaterial.h
src/api/: QGCCorePlugin.cc  QGCCorePlugin.h
